added support for explicit number of shards or streaming engine based auto-sharding